--- a/lesson_19/index.html
+++ b/lesson_19/index.html
@@ -12,24 +12,26 @@
       <header class="header">
         <div class="header__container">
           <nav class="header__navigation">
-            <a class="header__logo" href="#"><img src="img/logo.png" alt="Logo" class="header__logo" /></a>
-              <ul class="menu">
-                <li class="menu__item">
-                  <a href="#" class="menu__link menu__active">Shop</a>
-                </li>
-                <li class="menu__item">
-                  <a href="#" class="menu__link">Men</a>
-                </li>
-                <li class="menu__item">
-                  <a href="#" class="menu__link">Women</a>
-                </li>
-                <li class="menu__item">
-                  <a href="#" class="menu__link">Combos</a>
-                </li>
-                <li class="menu__item">
-                  <a href="#" class="menu__link">Joggers</a>
-                </li>
-              </ul>
+            <a class="header__logo" href="#">
+              <img src="img/logo.png" alt="Logo" class="header__logo" />
+            </a>
+            <ul class="menu">
+              <li class="menu__item">
+                <a href="#" class="menu__link menu__active">Shop</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Men</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Women</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Combos</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Joggers</a>
+              </li>
+            </ul>
             <form action="#" class="header__form">
               <input
                 type="search"
@@ -64,7 +66,38 @@
           </nav>
         </div>
       </header>
-      <main class="main"></main>
+      <main class="page">
+        <div class="stock">
+          <div class="stock__container">
+            <div class="stock__item item-stock">
+              <div class="item-stock__bg">
+                <img src="img/main/hero/image-1.webp" alt="High Coziness" />
+              </div>
+              <div class="item-stock__body">
+                <div class="item-stock__content">
+                  <h5 class="item-stock__label">Low Price</h5>
+                  <h2 class="item-stock__title">High Coziness</h2>
+                  <div class="item-stock__discount">UPTO 50% OFF</div>
+                </div>
+                <a href="#" class="item-stock__link">Explore Items</a>
+              </div>
+            </div>
+            <div class="stock__item item-stock">
+              <div class="item-stock__bg">
+                <img src="img/main/hero/image-2.webp" alt="Breezy Summer Style" />
+              </div>
+              <div class="item-stock__body">
+                <div class="item-stock__content">
+                  <h5 class="item-stock__label">Beyoung Presents</h5>
+                  <h2 class="item-stock__title">Breezy Summer Style</h2>
+                  <div class="item-stock__discount">UPTO 50% OFF</div>
+                </div>
+                <a href="#" class="item-stock__link">Explore Items</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
       <footer class="footer"></footer>
     </div>
   </body>
